Añado header con imagen+ modifico menu con css y hidden

--- a/index.html
+++ b/index.html
@@ -8,22 +8,49 @@
     <meta property="og:description" content="Aprende más sobre mí">
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/normalice.css">
+    <link rel="stylesheet" href="styles/components.css">
+    <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/banner.css">
+    <link rel="stylesheet" href="styles/info.css">
 </head>
 <body>
     <header class="header">
+        <div class="header__image">
+            <img src="assets/img/Logo.png" alt="Cristobal">
+        </div>
         <nav class="header__nav">
             <ul class="header__nav__list">
-                <il class="header__nav__list__item">
-                    <a class="btn" href="#PENDIENTE">PENDIENTE</a>
-                </il>
-                <il class="header__nav__list__item">
-                    <a class="btn" href="#SingupPendiente">Sing up</a>
-                </il>
+                <li class="header__nav__list__item">
+                    <a class="btn" href="#PENDIENTE">Mis cosas</a>
+                </li>
+                <li class="header__nav__list__item hidden">
+                    <a class="btn" href="#Singup">Sing up</a>
+                </li>
             </ul>
         </nav>
     </header>
     <main>
-        <p>HOLA</p>
+        <section class="banner">
+            <div class="banner__image">
+                <a class="banner__button" href="AUN NO">PORTAFOLIO</a>
+            </div>
+        </section>
+        <section class="info">
+            <div class="info__text">
+                <h1>
+                    Sobre mí
+                </h1>
+                <p>
+                    ¡Hola a todos! Soy Cristóbal, un entusiasta de las motos de 23 años que vive en Lorca, Murcia. 
+                    Desde pequeño, las motocicletas han sido mi gran pasión. Actualmente, soy administrativo, 
+                    pero mi corazón siempre ha latido por la programación. Entre informes y papeleo, encuentro mi escape en mi Kawasaki Z900, 
+                    explorando las carreteras de Murcia y más allá. Cada curva es una aventura y cada kilómetro, una historia. 
+                    La sensación del viento en mi rostro y el rugido del motor son mi libertad en dos ruedas. 
+                    ¡A rodar juntos por la vida y persiguiendo mis sueños! 🏍️💻✨  
+                </p>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <p>Sígueme en redes sociales:</p>
