--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="header__nav">
             <ul class="header__nav__list">
                 <li class="header__nav__list__item">
-                    <a class="btn" href="#PENDIENTE">Mis cosas</a>
+                    <a class="btn" href="Proyect.html">Mis proyectos</a>
                 </li>
                 <li class="header__nav__list__item hidden">
                     <a class="btn" href="#Singup">Sing up</a>
@@ -84,11 +84,11 @@
         </section>
         <section class="banner">
             <div class="banner__image">
-                <a class="banner__button" href="AUN NO">PORTAFOLIO</a>
+                <a class="banner__button" href="Proyect.html">Mis Proyectos</a>
             </div>
         </section>
-        <div class="card">
-            <form method="" action="">
+        <div class="card" id="Singup" class="shows">
+            <form method="post" action="">
 
                 <div class="form__element">
                     <label class="form__label" for="name">Nombre</label>
