Añado cambio de imagen + efecto menu

--- a/Proyect.html
+++ b/Proyect.html
@@ -31,7 +31,7 @@
   </header>
   <main>
     <div id="video-container">
-      <iframe id="video" src="assets/img/Programar.mp4" frameborder="0" allowfullscreen></iframe>
+      <iframe id="video" width="400" height="315" src="https://www.youtube.com/embed/7vbi-OCFZEY?si=_bt3Unb2UJqrGVXL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 
     <div class="projects-container">
