--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <link rel="stylesheet" href="styles/info.css">
     <link rel="stylesheet" href="styles/singup.css">
     <link rel="stylesheet" href="styles/skills.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Estas 3 lineas son de una fuente -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="main-bg">
     <header class="header">
         <div class="header__image">
             <img src="assets/img/Logo.png" alt="Cristobal">
@@ -34,9 +37,6 @@
     </header>
     <main>
         <section class="about-section">
-            <h2>Mi Descripción</h2>
-            <p>Aquí puedes poner una descripción sobre ti.</p>
-        
             <h2>Mis Habilidades</h2>
             <div class="skills-container">
               <div class="skill">
